# itmo_generative_adversarial_networks

./: .gitignore  pyproject.toml
notebooks/: cgan.ipynb  gan_dcgan.ipynb  tricks_metrics.ipynb
notebooks/.ipynb_checkpoints/: gan_dcgan-checkpoint.ipynb
src/: c_gan.py  c_gan_trainer.py  dc_gan.py  gan.py  gan_trainer.py  image_utils.py  utils.py
